--- a/maytinhcoban.html
+++ b/maytinhcoban.html
@@ -19,10 +19,10 @@
 
     </tr>
     <tr>
-        <td><div id="Result"> </div></td>
+        <td id="Result"></td>
     </tr>
 
 </table>
 </body>
 </html>
-<script src="index.js"></script>
+<script src="maytinhcoban.js"></script>
